:bug: Fix inline label gaps in controls

--- a/src/css/night-react/components/_editor.sass
+++ b/src/css/night-react/components/_editor.sass
@@ -10,7 +10,6 @@
 
 +block(editor)
   @include global-reset()
-  @include border-radius(5px)
   @include user-select(none)
 
   // Webkit bugfix for rounded border with overflow: hidden
@@ -25,6 +24,9 @@
   height: 100%
   background: $backgroundColor
   text-align: left
+
+  @include screen-min-small
+    @include border-radius(5px)
 
   &, *
     box-sizing: border-box
