--- a/src/css/night-react/components/_subHeader.sass
+++ b/src/css/night-react/components/_subHeader.sass
@@ -59,9 +59,13 @@ $subHeaderHorizontalPadding: 20px
       position: relative
       display: inline-block
       margin: 0 5px
-      padding: 0 12px 0 9px
+      height: 30px
+      padding: 0 6px 0 9px
       background: $backgroundColor
       cursor: pointer
+
+      @include screen-min-small
+        padding-right: 12px
 
       +modifier(blue)
         background: $primaryColor
@@ -71,10 +75,13 @@ $subHeaderHorizontalPadding: 20px
 
       +element(label)
         @include font-regular
-        display: inline-block
+        display: none
         font-size: 12px
         line-height: 30px
         color: white
+
+        @include screen-min-small
+          display: inline-block
 
       +element(icon)
         position: absolute
